--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -481,23 +481,111 @@ h6 {
 #hero .icon-box:hover {
   border-color: #ffc451;
 }
-#hero .swiper-slide {
-  text-align: center;
-  font-size: 18px;  
-  background: #c60f0f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#hero .swiper {
+/* SWIPER */
+
+.heroswiper {
   width: 100%;
-  height: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  .swiper-slide {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+    filter: grayscale(80%);
+    transition: all 0.8s cubic-bezier(0.25, 0.4, 0.45, 1.4);
+    border-radius: 15px;
+    background: $gradient;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+    .info {
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+      z-index: 10;
+      padding: 15px;
+      box-shadow: inset 0 -120px 120px -120px black,
+        inset 0 -120px 120px -120px black;
+      h4 {
+        margin: 0;
+        padding-bottom: 10px;
+        color: #ffffff
+      }
+      p{
+        color: #ffffff
+      }
+    }
+  }
+  .swiper-slide-active {
+    filter: none;
+  }
+
+  //custom navigation
+
+  .swiper-pagination-bullet-active {
+    background-color: $primary !important;
+  }
+
+  .swiper-pagination-bullet {
+    background-color: grey;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    top: 50%;
+    width: 40px;
+    height: 40px;
+    background: rgb(255, 255, 38);
+    border: 3px solid $secondary;
+    border-radius: 50%;
+    color: $primary;
+    font-weight: 700;
+    outline: 0;
+    transition: background-color 0.2s ease, color 0.2s ease;
+
+    &::after {
+      font-size: 18px;
+    }
+  }
+
+  .swiper-button-prev {
+    &:after {
+      position: relative;
+      left: -1px;
+    }
+  }
+
+  .swiper-button-next {
+    &:after {
+      position: relative;
+      left: 1px;
+    }
+  }
+
+  .swiper-button-prev,
+  .swiper-container-rtl .swiper-button-next {
+    left: 10px;
+    right: auto;
+  }
+
+  .swiper-button-next,
+  .swiper-container-rtl .swiper-button-prev {
+    right: 10px;
+    left: auto;
+  }
+
+  .swiper-button-prev.swiper-button-disabled,
+  .swiper-button-next.swiper-button-disabled {
+    opacity: 0;
+    cursor: auto;
+    pointer-events: none;
+  }
 }
-#hero .swiper-slide img {
-  display: block;
-  
-  object-fit: cover;
-}
+
 @media (min-width: 1024px) {
   #hero {
     background-attachment: fixed;
@@ -1563,188 +1651,3 @@ section {
   color: #fff;
 }
 /* ################################################################################################################# */
-
-/* Profile */
-.avatar-xxl {
-  height: 7rem;
-  width: 7rem;
-}
-
-.card {
-  margin-bottom: 20px;
-  -webkit-box-shadow: 0 2px 3px #eaedf2;
-  box-shadow: 0 2px 3px #eaedf2;
-}
-
-.pb-0 {
-  padding-bottom: 0!important;
-}
-
-.font-size-16 {
-  font-size: 16px!important;
-}
-.avatar-title {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-color: #038edc;
-  color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-weight: 500;
-  height: 100%;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.bg-soft-primary {
-  background-color: rgba(3,142,220,.15)!important;
-}
-.rounded-circle {
-  border-radius: 50%!important;
-}
-
-.nav-tabs-custom .nav-item .nav-link.active {
-  color: #038edc;
-}
-.nav-tabs-custom .nav-item .nav-link {
-  border: none;
-}
-.nav-tabs-custom .nav-item .nav-link.active {
-  color: #038edc;
-}
-
-.avatar-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding-left: 12px;
-}
-
-.border-end {
-  border-right: 1px solid #eff0f2 !important;
-}
-
-.d-inline-block {
-  display: inline-block!important;
-}
-
-.badge-soft-danger {
-  color: #f34e4e;
-  background-color: rgba(243,78,78,.1);
-}
-
-.badge-soft-warning {
-  color: #f7cc53;
-  background-color: rgba(247,204,83,.1);
-}
-
-.badge-soft-success {
-  color: #51d28c;
-  background-color: rgba(81,210,140,.1);
-}
-
-.avatar-group .avatar-group-item {
-  margin-left: -14px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  -webkit-transition: all .2s;
-  transition: all .2s;
-}
-
-.avatar-sm {
-  height: 2rem;
-  width: 2rem;
-}
-
-.nav-tabs-custom .nav-item {
-  position: relative;
-  color: #343a40;
-}
-
-.nav-tabs-custom .nav-item .nav-link.active:after {
-  -webkit-transform: scale(1);
-  transform: scale(1);
-}
-
-.nav-tabs-custom .nav-item .nav-link::after {
-  content: "";
-  background: #038edc;
-  height: 2px;
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: -2px;
-  -webkit-transition: all 250ms ease 0s;
-  transition: all 250ms ease 0s;
-  -webkit-transform: scale(0);
-  transform: scale(0);
-}
-
-.badge-soft-secondary {
-  color: #74788d;
-  background-color: rgba(116,120,141,.1);
-}
-
-.badge-soft-secondary {
-  color: #74788d;
-}
-
-.work-activity {
-  position: relative;
-  color: #74788d;
-  padding-left: 5.5rem
-}
-
-.work-activity::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 66px;
-  border-left: 1px solid rgba(3,142,220,.25)
-}
-
-.work-activity .work-item {
-  position: relative;
-  border-bottom: 2px dashed #eff0f2;
-  margin-bottom: 14px
-}
-
-.work-activity .work-item:last-of-type {
-  padding-bottom: 0;
-  margin-bottom: 0;
-  border: none
-}
-
-.work-activity .work-item::after,.work-activity .work-item::before {
-  position: absolute;
-  display: block
-}
-
-.work-activity .work-item::before {
-  content: attr(data-date);
-  left: -157px;
-  top: -3px;
-  text-align: right;
-  font-weight: 500;
-  color: #74788d;
-  font-size: 12px;
-  min-width: 120px
-}
-
-.work-activity .work-item::after {
-  content: "";
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  left: -26px;
-  top: 3px;
-  background-color: #fff;
-  border: 2px solid #038edc
-}
