--- a/public/assets/css/style.rtl.css
+++ b/public/assets/css/style.rtl.css
@@ -11,7 +11,8 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Noto Naskh Arabic", sans-serif;
-  color: #444444;
+  color: #ffffff;
+  background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(0, 0, 0) 78.9%);
 }
 
 a {
@@ -481,6 +482,7 @@ h6 {
 #hero .icon-box:hover {
   border-color: #ffc451;
 }
+
 /* SWIPER */
 
 /* $primary: #c31432;
@@ -491,6 +493,7 @@ $gradient: linear-gradient(to right, #c31432, #240b36); */
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
+
   .swiper-slide {
     position: relative;
     width: 300px;
@@ -501,11 +504,13 @@ $gradient: linear-gradient(to right, #c31432, #240b36); */
     border-radius: 15px;
     background: linear-gradient(to right, #ffc55125, #0808084a);
     overflow: hidden;
+
     img {
       width: 100%;
       height: 100%;
       object-fit: contain;
     }
+
     .info {
       width: 100%;
       position: absolute;
@@ -514,16 +519,19 @@ $gradient: linear-gradient(to right, #c31432, #240b36); */
       padding: 15px;
       box-shadow: inset 0 -120px 120px -120px black,
         inset 0 -120px 120px -120px black;
+
       h4 {
         margin: 0;
         padding-bottom: 10px;
         color: #ffffff
       }
-      p{
+
+      p {
         color: #ffffff
       }
     }
   }
+
   .swiper-slide-active {
     filter: none;
   }
@@ -756,12 +764,22 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+.services {
+  /* From https://css.glass */
+  background: rgba(0, 0, 0, 0.95);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(0, 0, 0, 0.28);
+}
+
 .services .icon-box {
   text-align: center;
   border: 1px solid #ebebeb;
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
-  background: #fff;
+  background: rgba(13, 13, 13, 0.2);
 }
 
 .services .icon-box .icon {
@@ -1040,18 +1058,29 @@ section {
 /*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
+.counts{
+  /* From https://css.glass */
+background: rgba(0, 0, 0, 0.95);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(0, 0, 0, 0.28);
+}
 .counts .content {
   padding: 30px 0;
+  background: rgba(0, 0, 0, 0.053);
 }
 
 .counts .content h3 {
   font-weight: 700;
   font-size: 34px;
-  color: #151515;
+  color: #ffffff;
 }
 
 .counts .content p {
   margin-bottom: 0;
+  color: #fff;
 }
 
 .counts .content .count-box {
@@ -1071,7 +1100,7 @@ section {
   line-height: 30px;
   display: block;
   font-weight: 700;
-  color: #151515;
+  color: #f7f7f7;
   margin-left: 50px;
 }
 
@@ -1087,7 +1116,7 @@ section {
   font-weight: 600;
   display: block;
   margin-top: 20px;
-  color: #3b3b3b;
+  color: #ffc55195;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
   transition: ease-in-out 0.3s;
@@ -1317,15 +1346,29 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+.contact iframe {
+  background: rgba(0, 0, 0, 0.235);
+border-radius: 16px;
+box-shadow: 0 10px 20px rgba(174, 174, 174, 0.799);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(0, 0, 0, 0.28);
+}
 .contact .info {
   width: 100%;
-  background: #fff;
+  /* From https://css.glass */
+background: rgba(0, 0, 0, 0.95);
+border-radius: 16px;
+box-shadow: 0 10px 20px rgba(174, 174, 174, 0.799);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(0, 0, 0, 0.28);
 }
 
 .contact .info i {
   font-size: 20px;
   background: #ffc451;
-  color: #151515;
+  color: #ffffff;
   float: left;
   width: 44px;
   height: 44px;
@@ -1341,24 +1384,32 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #151515;
+  color: #ffffff;
 }
 
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 14px;
-  color: #484848;
+  color: #a3a1a1;
 }
+
 
 .contact .info .email,
 .contact .info .phone {
   margin-top: 40px;
+  
 }
 
 .contact .php-email-form {
   width: 100%;
-  background: #fff;
+  background: rgba(0, 0, 0, 0.95);
+border-radius: 16px;
+box-shadow: 0 10px 20px rgba(174, 174, 174, 0.799);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(0, 0, 0, 0.28);
+padding: 20px;
 }
 
 .contact .php-email-form .form-group {
@@ -1654,4 +1705,5 @@ section {
   font-size: 13px;
   color: #fff;
 }
+
 /* ################################################################################################################# */
