--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,7 +11,12 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #444444;
+  color: #ffffff;
+    background: linear-gradient(
+        109.6deg,
+        rgba(0, 0, 0, 0.93) 11.2%,
+        rgb(0, 0, 0) 78.9%
+    );
 }
 
 a {
@@ -483,106 +488,120 @@ h6 {
 }
 /* SWIPER */
 
-.heroswiper {
+#hero .heroswiper {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
+
   .swiper-slide {
-    position: relative;
-    width: 300px;
-    height: 400px;
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
-    filter: grayscale(80%);
-    transition: all 0.8s cubic-bezier(0.25, 0.4, 0.45, 1.4);
-    border-radius: 15px;
-    background: $gradient;
-    overflow: hidden;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-    .info {
-      width: 100%;
-      position: absolute;
-      bottom: 0;
-      z-index: 10;
-      padding: 15px;
-      box-shadow: inset 0 -120px 120px -120px black,
-        inset 0 -120px 120px -120px black;
-      h4 {
-        margin: 0;
-        padding-bottom: 10px;
-        color: #ffffff
+      position: relative;
+      width: 300px;
+      height: 400px;
+      box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+      filter: grayscale(80%);
+      transition: all 0.8s cubic-bezier(0.25, 0.4, 0.45, 1.4);
+      border-radius: 15px;
+      background: linear-gradient(to right, #ffc55125, #0808084a);
+      overflow: hidden;
+
+      img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
       }
-      p{
-        color: #ffffff
+
+      .info {
+          width: 100%;
+          position: absolute;
+          bottom: 0;
+          z-index: 10;
+          padding: 15px;
+          box-shadow: inset 0 -120px 120px -120px black,
+              inset 0 -120px 120px -120px black;
+
+          h4 {
+              margin: 0;
+              padding-bottom: 10px;
+              color: #ffffff;
+          }
+
+          p {
+              color: #ffffff;
+          }
       }
-    }
-  }
-  .swiper-slide-active {
-    filter: none;
   }
 
-  //custom navigation
+  .swiper-slide-active {
+      filter: none;
+  }
+
+  /* //custom navigation */
 
   .swiper-pagination-bullet-active {
-    background-color: $primary !important;
+      background-color: #fbe413 !important;
   }
 
   .swiper-pagination-bullet {
-    background-color: grey;
-  }
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    top: 50%;
-    width: 40px;
-    height: 40px;
-    background: rgb(255, 255, 38);
-    border: 3px solid $secondary;
-    border-radius: 50%;
-    color: $primary;
-    font-weight: 700;
-    outline: 0;
-    transition: background-color 0.2s ease, color 0.2s ease;
-
-    &::after {
-      font-size: 18px;
-    }
+      background-color: grey;
   }
 
   .swiper-button-prev {
-    &:after {
-      position: relative;
-      left: -1px;
-    }
+      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23fbe413'%2F%3E%3C%2Fsvg%3E") !important;
   }
 
   .swiper-button-next {
-    &:after {
-      position: relative;
-      left: 1px;
-    }
+      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23fbe413'%2F%3E%3C%2Fsvg%3E") !important;
   }
 
   .swiper-button-prev,
-  .swiper-container-rtl .swiper-button-next {
-    left: 10px;
-    right: auto;
+  .swiper-button-next {
+      top: 50%;
+      width: 40px;
+      height: 40px;
+      background: rgba(253, 253, 253, 0);
+      border: 3px solid transparent;
+      border-radius: 50%;
+      color: #ffffff00;
+      font-weight: 700;
+      outline: 0;
+      transition: background-color 0.2s ease, color 0.2s ease;
+
+      &::after {
+          font-size: 18px;
+      }
+  }
+
+  .swiper-button-prev {
+      &:after {
+          position: relative;
+          left: -1px;
+      }
+  }
+
+  .swiper-button-next {
+      &:after {
+          position: relative;
+          left: 1px;
+      }
+  }
+
+  .swiper-button-prev,
+  .swiper-container-rtl .swiper-button-prev {
+      left: 10px;
+      right: auto;
   }
 
   .swiper-button-next,
-  .swiper-container-rtl .swiper-button-prev {
-    right: 10px;
-    left: auto;
+  .swiper-container-rtl .swiper-button-next {
+      right: 10px;
+      left: auto;
   }
 
   .swiper-button-prev.swiper-button-disabled,
   .swiper-button-next.swiper-button-disabled {
-    opacity: 0;
-    cursor: auto;
-    pointer-events: none;
+      opacity: 0;
+      cursor: auto;
+      pointer-events: none;
   }
 }
 
@@ -1228,7 +1247,7 @@ section {
 # Team
 --------------------------------------------------------------*/
 .team {
-  background: #fff;
+  background: linear-gradient(to right, #d1d1d125, #0808084a);
   padding: 60px 0;
 }
 
